assets/sass/_default/layouts/_header.sass
header[role="banner"]
    transition: background $header-transition, top $header-transition

    html.is-menu-open &
        background-color: white
        color: black
        &::after
            background-color: rgba(black, 0.2)
        .logo img
            filter: invert(1)

    &::after
        background-color: rgba(white, .2)
        bottom: 0
        content: ''
        height: 1px
        left: 0
        position: absolute
        transition: background-color $header-transition
        width: 100%
    .logo
        img
            height: 42px
            transition: filter $header-transition
            @include media-breakpoint-down(lg)
                height: 30px

    nav[role="navigation"]
        button[type="button"]
            color: white

    &:not(.is-sticky)
        background-color: $site-color


    &.is-sticky
        .logo img
            filter: invert(1)

